Fix: Alignment issues with the content in the share container

--- a/article-preview-component/sass/style.sass
+++ b/article-preview-component/sass/style.sass
@@ -79,7 +79,7 @@ main
   bottom: 0
   left: 0
   display: grid
-  grid-template-columns: 102px auto 64px
+  grid-template-columns: 102px auto 62px
   grid-template-rows: 76px
   column-gap: 15px
   align-items: center
@@ -102,6 +102,7 @@ main
   display: flex
   column-gap: 1.3rem
   li
+    display: flex
     width: 20px
 
 .share-card-share-img
